Create homepage structure

--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -4,16 +4,17 @@ topmenu:
 - title: Home
   url: ""
 
+- title: Courses
+  url: "about/"
+
+- title: Blog
+  url: "about/"
+
 - title: About
   url: "about/"
 
 - title: Contact
   url: "contact/"
-
-- title: Get this theme  
-  url: https://bootstrapstarter.com/template-affiliates-bootstrap-jekyll/
-  class: "ml-2 btn btn-dark text-white px-3"
-  external: true
 
 # Footer Menu
 footermenu:
